@@ -1,3 +1,8 @@
+Sat Aug 30 15:40:00 2014  Jiri (George) Lebl <jirka@5z.com>
+
+	* gtkextra/gtkplotflux.c: fix almost zero arrows causing NaNs causing
+	  postscript errors.
+
 Fri Aug 29 10:41:36 2014  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/gnome-genius.c: fix compilation on my old ubuntu 10.04 laptop
